2004-03-08  Christophe Fergeau  <teuf@gnome.org>

	* configure.in: properly install ssl-modules.conf when using GNU TLS
	* libgnomevfs/gnome-vfs-ssl.c: (gnome_vfs_ssl_create_from_fd): fix
	implicit cast from int to pointer

2004-03-07  Christophe Fergeau  <teuf@gnome.org>

	* configure.in: Need to define HAVE_OPENSSL when SSL is available ;)
	(backport from HEAD, spotted by Alex)

2004-03-04  Christophe Fergeau  <teuf@gnome.org>

	* modules/file-method.c (do_monitor_add):
	  apply alexl's patch from HEAD to handle NULL filenames
	  properly, fixes #136011

=== gnome-vfs 2.4.2 ===

2003-01-26  Christophe Fergeau  <teuf@gnome.org>

	* NEWS
	* configure.in: Version 2.4.2

2004-01-23  Alexander Larsson  <alexl@redhat.com>
        (backport from HEAD committed by Christophe Fergeau)
	
        * schemas/Makefile.am:
        Dist .schemas files, only clean them on maintainer-clean.
	
2004-01-22  Christophe Fergeau  <teuf@gnome.org>

	Portability patch from "The Written Word", fixes bug #131393

	* configure.in: use AC_SEARCH_LIBS instead of AC_CHECK_LIB
	  fix small bug in OpenSSL check, added various additional checks
	  for portability
	* libgnomevfs/gnome-vfs-inet-connection.c: wrap h_errno in #ifdef 
	  for AIX
	* libgnomevfs/gnome-vfs-mime-monitor.c: remove trailing comma in enum
	* libgnomevfs/gnome-vfs-private-utils.h: fix 
	  gnome_vfs_process_run_cancellable return value
	* libgnomevfs/gnome-vfs-process.c: fix _gnome_vfs_process_signal
	  return value
	* libgnomevfs/gnome-vfs-result.c: handle both ENOTEMPTY and EEXIST if
	  necessary
	* modules/bzip2-method.c:
	* modules/cdda-method.c:
	* modules/extfs-method.c: 
	* modules/gzip-method.c:
	* modules/vfolder/test-vfolder.c: 
	* modules/test-method.c:  Don't use C++ comments 
	* modules/fstype.c: include <libgen.h> for IRIX
	* modules/ftp-method.c: fix use of a non constant initializer
	* modules/vfolder/vfolder-method.c: fix val_end type

2004-01-18  Christophe Fergeau  <teuf@gnome.org>
